--- a/notebooks/reader/datasets.ipynb
+++ b/notebooks/reader/datasets.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,6 +26,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,14 +39,90 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'notebooks'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnotebooks\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01maqua\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m catalogue, inspect_catalogue\n\u001b[1;32m      2\u001b[0m cat \u001b[38;5;241m=\u001b[39m catalogue()\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'notebooks'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IFS\ttco3999-ng5\t2.8km experiment, coupled with FESOM\n",
+      "\t- ICMGG_atm2d\toriginal 2d output\n",
+      "\t- ICMU_atm2d\toriginal 2d output (lnsp)\n",
+      "\t- ICMU_atm3d\toriginal 3d output\n",
+      "\t- interpolated_global\tNN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])\n",
+      "IFS\ttco2559-ng5\t4km experiment, coupled with FESOM\n",
+      "\t- ICMGG_atm2d\toriginal 2d output\n",
+      "\t- ICMU_atm2d\toriginal 2d output (lnsp)\n",
+      "\t- ICMU_atm3d\toriginal 3d output\n",
+      "\t- interpolated_global\tNN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])\n",
+      "\t- lra-r100-mon\tLRA monthly data 1x1 deg regular grid\n",
+      "IFS\ttco1279-orca025\t9km baseline, coupled to NEMO, deep conv ON\n",
+      "\t- ICMGG_atm2d\toriginal 2d output\n",
+      "\t- ICMU_atm2d\toriginal 2d output (lnsp)\n",
+      "\t- ICMU_atm3d\toriginal 3d output\n",
+      "\t- lra-r100-mon\tLRA monthly data 1x1 deg regular grid\n",
+      "IFS\ttest-tco2559\t4km experiment, coupled with FESOM\n",
+      "\t- ICMGG_atm2d\t2d output\n",
+      "\t- ICMU_atm3d\t3d output\n",
+      "IFS\ttest-tco79\tTCO79 test data\n",
+      "\t- short\toriginal 2d output\n",
+      "\t- long\tcoarse IFS data 1y\n",
+      "\n",
+      "FESOM\ttco3999-ng5\t2.5km experiment, coupuled with IFS\n",
+      "\t- interpolated_global2d\t\n",
+      "\t- interpolated_global_TS\t\n",
+      "\t- interpolated_global_UV\t\n",
+      "\t- original_2d\toriginal 2d output\n",
+      "\t- original_3d\toriginal 3d output\n",
+      "FESOM\ttco2559-ng5\t5km experiment, coupuled with IFS\n",
+      "\t- interpolated_global2d\t\n",
+      "\t- interpolated_global_TS\t\n",
+      "\t- interpolated_global_UV\t\n",
+      "\t- original_2d\toriginal 2d output\n",
+      "\t- original_3d\toriginal 3d output\n",
+      "\t- lra-r100-mon\t\n",
+      "FESOM\ttest-pi\ttest data\n",
+      "\t- original_2d\toriginal 2d output\n",
+      "\n",
+      "ICON\tngc2009\t5km coupled run, main ICON nextGEMS C2 run\n",
+      "\t- atm_2d_ml_R02B09\toriginal 2d output on R02B09 grid (5 km)\n",
+      "\t- atm_2d_ml_R02B08\toriginal 2d output on R02B09 grid (10 km)\n",
+      "\t- oce_200m_atmgrid_R02B09\toriginal ocean 3d output on R02B09 grid (5 km)\n",
+      "\t- intake-esm-test\tTest Intake-ESM Catalog\n",
+      "\t- lra-r100-mon\tLRA daily data 1x1 deg regular grid\n",
+      "ICON\thpx\tSome Healpix data\n",
+      "\t- result\t\n",
+      "\n",
+      "MSWEP\tpast\tpast MSWEP v280 data\n",
+      "\t- monthly\tmonthly MSWEP_V280 data\n",
+      "\t- daily\tdaily MSWEP_V280 data\n",
+      "\t- 3hourly\t3 hourly MSWEP_V280 data\n",
+      "\t- monthlyz\tmonthly MSWEP_V280 data\n",
+      "\t- dailyz\tdaily MSWEP_V280 data\n",
+      "\n",
+      "ERA5\tera5\tmain ERA5 data\n",
+      "\t- monthly_inst\tERA5 instantaneous 2D data monthly averaged\n",
+      "\t- monthly_acc\tERA5 accumulated 2D data monthly averaged\n",
+      "\t- daily_inst\tERA5 instantaneous 2D data daily\n",
+      "\t- daily_acc\tERA5 accumulated 2D data daily\n",
+      "\n",
+      "CERES\tebaf-toa41\tCERES-EBAF\n",
+      "\t- monthly\tCERES EBAF TOA Ed4.2 from 2002 to 2022\n",
+      "CERES\tebaf-toa42\tCERES-EBAF\n",
+      "\t- monthly\tCERES EBAF TOA Ed4.2 from 2002 to 2022\n",
+      "CERES\tebaf-sfc41\tCERES-EBAF\n",
+      "\t- monthly\tCERES EBAF SFC Ed4.1 from 2002 to 2022\n",
+      "CERES\tsyn-toa41\tCERES-EBAF\n",
+      "\t- daily\tCERES SYN TOA Ed4.1 from 2001 to 2021\n",
+      "\n",
+      "AVISO\tssh-L4\tAVISO Sea Surface Height L4 product and derived variables\n",
+      "\t- daily\tAVISO ssh vDT2021\n",
+      "\n",
+      "PHC3\tphc3\tPHC3 Polar science center Hydrographic Climatology\n",
+      "\t- annual\tPHC3\n",
+      "\t- seasonal\tPHC3\n",
+      "\n",
+      "WOA18\twoa18_2005_2017\tWorld Ocean Atlas climatology\n",
+      "\t- annual\tWOA18 2005-2017\n",
+      "\t- seasonal\tWOA18 2005-2017\n",
+      "\n"
      ]
     }
    ],
@@ -52,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,6 +221,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,6 +229,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,6 +247,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -180,6 +264,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -816,6 +901,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2824,6 +2910,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2861,6 +2948,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2881,6 +2969,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2918,6 +3007,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4083,6 +4173,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4120,6 +4211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6163,6 +6255,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6736,6 +6829,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6743,6 +6837,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9113,6 +9208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9120,6 +9216,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12290,9 +12387,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aqua",
+   "display_name": "aqua2",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -12304,8 +12401,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.10"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "636b77c3b71dd6ba33af653f8727f24a841619154cf626b6f4159e1c882c7e47"
@@ -12313,5 +12411,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
