--- a/diagnostics/global-ocean-diagnostics/global-means-interp.ipynb
+++ b/diagnostics/global-ocean-diagnostics/global-means-interp.ipynb
@@ -8,10 +8,19 @@
    },
    "outputs": [],
    "source": [
-    "# Modules will import some dependencies like Onepass\n",
-    "from modules import *\n",
-    "import datetime"
+    "from aqua import Reader,catalogue, inspect_catalogue\n",
+    "import datetime\n",
+    "import xarray as xr\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
