--- a/notebooks/gribber/gribber.ipynb
+++ b/notebooks/gribber/gribber.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +25,7 @@
     "The `Gribber` class from the `aqua` framework checks the availability of grib files in a specified directory `datadir` for a specific experiment and creates `.index` files and a `.json` file.\n",
     "It also automatically updates the catalog `yaml` file.\n",
     "\n",
-    "It takes as input, which as to specified in a configuration yaml file (please check the `gribber_setup_example.tmpl`):\n",
+    "It takes as input, which as to be specified in a configuration yaml file (please check `AQUA/cli/gribber/gribber_setup.tmpl`):\n",
     "- `model`: model name\n",
     "- `exp`: experiment name\n",
     "- `source`: source name\n",
@@ -37,19 +38,20 @@
     "- `nprocs`: number of processors (default: `1`)\n",
     "- `replace`: replace existing files (default: `False`)\n",
     "\n",
-    "We start defining the default directories to work on Levante and then apply the class with a default IFS experiment"
+    "We start defining the default directories to work on Levante and then apply the class with a default IFS experiment.  Please change the outdir if you want to try this notebook!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_dir = {'datadir': '/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2',\n",
-    "               'tmpdir': '/scratch/b/b382289/gribscan',\n",
-    "               'jsondir': '/work/bb1153/b382289/gribscan-json',\n",
-    "               'catalogdir': '/work/bb1153/b382289/AQUA/config/levante/catalog'}"
+    "outdir = 'b382321'\n",
+    "default_dir = {'datadir': '/scratch/b/' + outdir + '/tco1279-orca025/nemo_deep/ICMGGc2',\n",
+    "               'tmpdir': '/scratch/b/' + outdir + '/gribscan',\n",
+    "               'jsondir': '/work/bb1153/' + outdir + '/gribscan-json',\n",
+    "               'configdir': '/home/b/' + outdir + '/AQUA/config'}\n"
    ]
   },
   {
@@ -63,30 +65,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Data directory: /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2\n",
-      "JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
-      "Catalog directory: /work/bb1153/b382289/AQUA/config/levante/catalog\n",
-      "Gribfile wildcard: ICMGG????+*\n",
-      "Catalog file: /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
-      "JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
-      "Checking if indices already exist...\n",
-      "Indices already exist.\n",
-      "Checking if JSON file already exists...\n",
-      "JSON file already exists.\n",
-      "Checking if catalog file already exists...\n",
-      "Catalog file /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> Data directory: /scratch/b/b382321/tco1279-orca025/nemo_deep/ICMGGc2\n",
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> JSON directory: /work/bb1153/b382321/gribscan-json/tco1279-orca025\n",
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> Catalog directory: /home/b/b382321/AQUA/config\n",
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> Gribfile wildcard: ICMGG????+*\n",
+      "2023-05-17 16:54:40 :: gribber :: WARNING  -> Catalog file: /home/b/b382321/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml\n",
+      "2023-05-17 16:54:40 :: gribber :: WARNING  -> JSON file: /work/bb1153/b382321/gribscan-json/tco1279-orca025/atm2d.json\n",
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> Checking if indices already exist...\n",
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> Checking if JSON file already exists...\n",
+      "2023-05-17 16:54:40 :: gribber :: INFO     -> Checking if catalog file already exists...\n",
+      "2023-05-17 16:54:40 :: gribber :: WARNING  -> Catalog file /home/b/b382321/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
      ]
     }
    ],
    "source": [
-    "mygrib = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d', dir = default_dir, verbose=True)"
+    "mygrib = Gribber(model='IFS',exp='tco1279-orca025',source='ICMGG_atm2d', dirdict = default_dir, loglevel = 'INFO')"
    ]
   },
   {
@@ -99,34 +99,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Folder /scratch/b/b382289/gribscan/tco1279-orca025 already exists\n",
-      "Folder /work/bb1153/b382289/gribscan-json/tco1279-orca025 already exists\n",
-      "Creating symlinks...\n",
-      "Searching in...\n",
-      "/scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000064 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000040 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000096 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000024 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000048 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000056 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000032 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000088 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000016 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000008 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000080 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000000 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "File /scratch/b/b382289/tco1279-orca025/nemo_deep/ICMGGc2/ICMGGhr2n+000072 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "Block to be added to catalog file:\n",
-      "{'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
-      "Source ICMGG_atm2d already exists in /work/bb1153/b382289/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n"
+      "2023-05-17 16:54:47 :: create_folder :: WARNING  -> Creating folder /scratch/b/b382321/gribscan/tco1279-orca025\n",
+      "2023-05-17 16:54:47 :: create_folder :: WARNING  -> Creating folder /work/bb1153/b382321/gribscan-json/tco1279-orca025\n",
+      "2023-05-17 16:54:47 :: gribber :: INFO     -> Creating symlinks...\n",
+      "2023-05-17 16:54:47 :: gribber :: INFO     -> Searching in /scratch/b/b382321/tco1279-orca025/nemo_deep/ICMGGc2...\n",
+      "2023-05-17 16:54:47 :: gribber :: INFO     -> /scratch/b/b382321/tco1279-orca025/nemo_deep/ICMGGc2/ICMGG????+*\n",
+      "2023-05-17 16:54:47 :: gribber :: INFO     -> Creating GRIB indices...\n",
+      "usage: gribscan-index [-h] [-n [NPROCS]] GRIB [GRIB ...]\n",
+      "gribscan-index: error: the following arguments are required: GRIB\n",
+      "2023-05-17 16:55:15 :: gribber :: INFO     -> CompletedProcess(args=['gribscan-index', '-n', '1'], returncode=2)\n",
+      "2023-05-17 16:55:15 :: gribber :: INFO     -> Creating JSON file...\n",
+      "usage: gribscan-build [-h] [-o outdir] [--prefix template_prefix]\n",
+      "                      [-m magician]\n",
+      "                      GRIB.index [GRIB.index ...]\n",
+      "gribscan-build: error: the following arguments are required: GRIB.index\n",
+      "2023-05-17 16:55:17 :: gribber :: INFO     -> Block to be added to catalog file:\n",
+      "2023-05-17 16:55:17 :: gribber :: INFO     -> {'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382321/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
+      "2023-05-17 16:55:17 :: gribber :: WARNING  -> Source ICMGG_atm2d already exists in /home/b/b382321/AQUA/config/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n",
+      "2023-05-17 16:55:17 :: gribber :: INFO     -> Block to be added to main catalog file:\n",
+      "2023-05-17 16:55:17 :: gribber :: INFO     -> {'tco1279-orca025': {'description': 'tco1279-orca025 data', 'driver': 'yaml_file_cat', 'args': {'path': '{{CATALOG_DIR}}/tco1279-orca025.yaml'}}}\n",
+      "2023-05-17 16:55:17 :: gribber :: WARNING  -> Source tco1279-orca025 already exists                    in /home/b/b382321/AQUA/config/levante/catalog/IFS/main.yaml. Skipping...\n"
      ]
     }
    ],
